Kubernetes/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: svc-nginx-pod
spec:
  containers:
  - name: nginx-pod
    image: nginx:stable
    ports:
      - containerPort: 80
    resources:
      limits:
        cpu: "1"
        memory: "500Mi"
