Kubernetes/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql
spec:
  type: LoadBalancer
  selector:
    app: svc-mysql-pod
  ports:
  - port: 80
    targetPort: 80
