Kubernetes/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  type: LoadBalancer
  selector:
    app: svc-nginx-pod
  ports:
  - port: 80
    targetPort: 80
