Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
            - path: /nginx
              pathType: Prefix
              backend:
                service:
                  name: svc-nginx
                  port:
                    number: 80
            - path: /mysql
              pathType: Prefix
              backend:
                service:
                  name: svc-mysql
                  port:
                    number: 80
